cluster/apps/programming/gitlab/ingress/kas-direct-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: direct-gitlab-kas
  namespace: gitlab
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: "gitlab-direct-rewritebody@kubernetescrd,gitlab-direct-rewriteheaders@kubernetescrd"
spec:
  tls:
    - secretName: "direct-${SECRET_DOMAIN/./-}-tls"
  rules:
    - host: "kas-gitlab.direct.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /k8s-proxy/
            pathType: Prefix
            backend:
              service:
                name: gitlab-kas
                port:
                  number: 8154
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab-kas
                port:
                  number: 8150
